# ChangeLog for dev-perl/Crypt-RIPEMD160
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Crypt-RIPEMD160/ChangeLog,v 1.9 2003/07/12 10:49:57 aliz Exp $

*Crypt-RIPEMD160-0.04 (07 Jun 2003)

  07 Jun 2003; Michael Cummings <mcummings@gentoo.org>
  Crypt-RIPEMD160-0.04.ebuild:
  CPAN update

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
*Crypt-RIPEMD160-0.03-r3 (21 Jun 2003)
 
  12 Jul 2003; Daniel Ahlberg <aliz@gentoo.org> :
  Added missing changelog entry.

*Crypt-RIPEMD160-0.03-r2 (5 May 2002)

  31 Jul 2002; Calum Selkirk <cselkirk@gentoo.org> Crypt-RIPEMD160-r2.ebuild :

  Added ppc to KEYWORDS.

  5 May 2002; Seemant Kulleen <seemant@gentoo.org> Crypt-RIPEMD160-r2.ebuild
  files/digest-Crypt-RIPEMD-160-r2 :

  Converted eclasses.

*Crypt-RIPEMD160-0.03-r1 (3 May 2002)

  3 May 2002; Donny Davies <woodchip@gentoo.org> :

  Added LICENSE, SLOT.

*Crypt-RIPEMD160-0.03 (1 Feb 2002)

  1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
  
  Added initial ChangeLog which should be updated whenever the package is
  updated in any way. This changelog is targetted to users. This means that the
  comments should well explained and written in clean English. The details about
  writing correct changelogs are explained in the skel.ChangeLog file which you
  can find in the root directory of the portage repository.