@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/Crypt-RIPEMD160
-# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Crypt-RIPEMD160/ChangeLog,v 1.9 2003/07/12 10:49:57 aliz Exp $
+# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Crypt-RIPEMD160/ChangeLog,v 1.10 2004/01/09 21:13:48 gustavoz Exp $
+
+  09 Jan 2004; <gustavoz@gentoo.org> Crypt-RIPEMD160-0.04.ebuild:
+  marked stable on sparc
 
 *Crypt-RIPEMD160-0.04 (07 Jun 2003)
 
